Añadir id para hacer la llamada en el alert

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               >
             </div>
             <div class="bndfndtexto-cont-btn">
-              <a href="##contacto##" class="bndfndtexto-btn-lnk"
+              <a href="##contacto##" class="bndfndtexto-btn-lnk" id="alerta"
                 ><span>NO</span></a
               >
             </div>
