--- a/index.html
+++ b/index.html
@@ -42,10 +42,9 @@
                 ><span>SI</span></a
               >
             </div>
-            <div class="bndfndtexto-cont-btn">
-              <a href="##contacto##" class="bndfndtexto-btn-lnk" id="alerta"
-                ><span>NO</span></a
-              >
+            <div class="bndfndtexto-cont-btn">             
+              <a id="alerta" href="#" onclick="alerta();return false;">
+                <span>NO</span></a>
             </div>
           </div>
         </div>
