--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@
                 ><span>SI</span></a
               >
             </div>
-            <div class="bndfndtexto-cont-btn">             
+            <div class="bndfndtexto-cont-btn">
               <a id="alerta" href="#" onclick="alerta();return false;">
-                <span>NO</span></a>
+                <span>NO</span></a
+              >
             </div>
           </div>
         </div>
